--- a/stylo.css
+++ b/stylo.css
@@ -5,6 +5,14 @@ article {
     width: 80%;
 }
 
+@media (min-width: 625px) {
+    article {
+        width: 500px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 #logo { width: 100%; }
 
 /* Style */
