--- a/stylo.css
+++ b/stylo.css
@@ -16,6 +16,7 @@ article {
 #logo { width: 100%; }
 
 nav { margin-top: 100px; }
+nav ul li { float: left; margin-right: 15px;}
 
 /* Style */
 body, a {
@@ -36,4 +37,9 @@ h2 {
 
 nav ul li {
     list-style: none;
+}
+
+nav ul li a {
+    font-weight: 600;
+    color: #AAA;
 }
