--- a/views/invited.html
+++ b/views/invited.html
@@ -1,7 +1,8 @@
-{% extends "basic_layout.html" %}
+{% extends "auth_layout.html" %}
 {% block content %}
 
 <div class="info">
+    {{ foo }}
     <h1>Congratulations</h1>
     <p>You've been randomly picked from the Mozilla community.</p>
     <p>Your in the spotlight. What will you share?</p>
@@ -11,4 +12,13 @@
     <p>If you don't want to partiscipate, you can ingnore this email.</p>
     <p>To unsubsribe, <a href="TODO">Click here</a></p>
 </div>
+{% endblock %}
+{% block userinfo %}
+var currentUser = {{user}};
+{% endblock %}
+
+{% block onready %}
+if (!! currentUser) {
+    window.location = baseUrl + '/instructions';
+}
 {% endblock %}
