--- a/views/invited.html
+++ b/views/invited.html
@@ -2,15 +2,15 @@
 {% block content %}
 
 <div class="info">
-    {{ foo }}
     <h1>Congratulations</h1>
     <p>You've been randomly picked from the Mozilla community.</p>
     <p>Your in the spotlight. What will you share?</p>
 
     <h2>Instructions</h2>
-    <p>If you want to partiscipate, <a href="instructions.html">Sign in</a> to get the instructions.</p>
-    <p>If you don't want to partiscipate, you can ingnore this email.</p>
-    <p>To unsubsribe, <a href="TODO">Click here</a></p>
+    <p>If you want to participate, <b>Sign In</b> to get the instructions.</p>
+    <p><a href="" id="signin2"><img src="email_sign_in_blue.png" alt="Sign In with Email" /></a></p>
+    <p>If you <b>don't want to participate</b>, you can ignore this email.</p>
+    <p><a href="TODO">Click to unsubscribe from Spotlight emails.</a></p>
 </div>
 {% endblock %}
 {% block userinfo %}
